@@ -35,4 +35,5 @@ Known bugs:
  * /me does not work encrypted
  * there are some anomalies if both set /otp off and one tries to reenable
  * Keyfile creation function is not threaded and therfore locks pidgin
- * More then one key per conversation is not supported yet.
+ * More then one key per conversation is not supported yet
+ * The first "Encryption enabled." messages gets sometimes lost due to timing problems
